# machine-learning

./: LICENSE.txt  README.md  pyproject.toml
src/machine_learning/BikeRental/: Bichl_Paul_UE1.ipynb  data_inspection.ipynb
src/machine_learning/BikeRental/Data/: info.txt
src/machine_learning/test/: test.ipynb
